# adjudicator

./: .gitignore  LICENSE  README.md  adjudicator.py  examples.py  pyproject.toml
tests/: test_deterministic.py
